<resources>
    <string name="app_name">ShoppingApplication</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_out">Log Out</string>
    <string name="log_in">Log In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="user_name">User Name</string>
    <string name="sign_in_alternate">or sign up with</string>
    <string name="error_email_empty">Please enter your email address.</string>
    <string name="error_password_empty">Please enter your password.</string>
    <string name="error_auth_failed">Authentication failed. Please check your email and password and try again.</string>
    <string name="error_weak_password">Your password should be at least 6 characters long.</string>
    <string name="error_user_exists">An account with this email address already exists.</string>
    <string name="logo_of_the_company">Logo of the company</string>
    <string name="just_a_rectangular_box">just a rectangular box</string>
    <string name="product_image">Product Image</string>
    <string name="product_price">Product Price</string>
    <string name="product_name">Product Name</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="buy_now">Buy Now</string>
    <string name="product_description">Product Description</string>
    <string name="read_more">Read More</string>
    <string name="desc_here">description here\ndescription here\ndescription here\ndescription here\ndescription here\ndescription here\ndescription here\ndescription here\ndescription here\ndescription here\ndescription here\ndescription here\ndescription here\ndescription here\ndescription here\ndescription here\ndescription here\ndescription here\ndescription here\ndescription here\ndescription here\n</string>
    <string name="show_products">Show Products</string>
    <string name="my_cart">My Cart</string>
    <string name="my_details">My Details</string>
    <string name="moto">We Deliver Fresh Foods</string>
    <string name="cart_amount">Total: ₹ 0.00</string>
    <string name="checkout">Checkout</string>
    <string name="my_orders">My Orders</string>
    <string name="order_def_value">Order #123456</string>
    <string name="order_status">Status: Shipped</string>
    <string name="estimated_del_date">Estimated Delivery: March 30, 2023</string>
    <string name="item_name">Item Name</string>
    <string name="_19_99">₹ 19.99</string>
    <string name="sample_user_name">John Doe</string>
    <string name="sample_gender">Male</string>
    <string name="sample_address">123 Main Street, Anytown USA</string>
    <string name="search_text">Search Here…</string>
    <string name="home">Home</string>
    <string name="minus_symbol">-</string>
    <string name="plus_symbol">+</string>
    <string name="zero">0</string>
    <string name="next">Next</string>
    <string name="menu_image">menu_image</string>
    <string name="delete">Delete</string>
    <string name="_12">12</string>

    <string-array name="category_options">
        <item>Category 1</item>
        <item>Category 2</item>
    </string-array>


</resources>