<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_prod_display"
        android:title="@string/show_products"
        android:icon="@drawable/mission"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/nav_cart"
        android:title="@string/my_cart"
        android:icon="@drawable/shopping_cart"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/nav_user_detail"
        android:title="@string/my_details"
        android:icon="@drawable/about_us"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/nav_track_order"
        android:title="Track my Order"
        android:icon="@drawable/track"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/nav_my_address"
        android:title="My address"
        android:icon="@drawable/home"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/nav_my_orders"
        android:title="My Orders"
        android:icon="@drawable/shopping_cart"
        app:showAsAction="ifRoom"/>
</menu>