<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/trackHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_dimension_20sp"
        android:textStyle="bold"
        android:fontFamily="@font/robot_condensed"
        android:textColor="@color/white"
        android:text="@string/my_orders"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/density_independent_pixel_1dp"
        android:background="@color/yellow"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/orderNumberTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_dimension_20sp"
        android:textStyle="bold"
        android:fontFamily="@font/robot_condensed"
        android:textColor="@color/white"
        android:text="@string/order_def_value"/>

    <TextView
        android:id="@+id/orderStatusTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_dimension_20sp"
        android:textStyle="bold"
        android:fontFamily="@font/robot_condensed"
        android:textColor="@color/white"
        android:text="@string/order_status"/>

    <TextView
        android:id="@+id/estimatedDeliveryTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_dimension_16sp"
        android:textStyle="bold"
        android:fontFamily="@font/robot_condensed"
        android:textColor="@color/white"
        android:text="@string/estimated_del_date"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/density_independent_pixel_1dp"
        android:background="@color/yellow"
        android:layout_marginTop="@dimen/density_independent_pixel_16dp"
        android:layout_marginBottom="@dimen/density_independent_pixel_16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="@dimen/density_independent_pixel_16dp">

        <ImageView
            android:id="@+id/itemImageView"
            android:layout_width="@dimen/density_independent_pixel_50dp"
            android:layout_height="@dimen/density_independent_pixel_50dp"
            android:layout_marginEnd="@dimen/density_independent_pixel_10dp"
            android:src="@drawable/project"
            app:tint="@color/yellow" />

        <TextView
            android:id="@+id/itemNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_dimension_16sp"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/density_independent_pixel_10dp"
            android:layout_marginEnd="@dimen/density_independent_pixel_10dp"
            android:textColor="@color/white"
            android:text="@string/item_name"/>

        <TextView
            android:id="@+id/itemPriceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_dimension_16sp"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/density_independent_pixel_10dp"
            android:textColor="@color/white"
            android:text="@string/_19_99"/>

    </LinearLayout>

</LinearLayout>
