<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_user_detial">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/logOutButton"
        android:layout_width="@dimen/density_independent_pixel_40dp"
        android:layout_height="@dimen/density_independent_pixel_40dp"
        android:layout_marginTop="@dimen/density_independent_pixel_4dp"
        android:layout_marginEnd="@dimen/density_independent_pixel_16dp"
        android:background="@drawable/power_off"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/user_detail_image"
        android:layout_width="@dimen/density_independent_pixel_194dp"
        android:layout_height="@dimen/density_independent_pixel_164dp"
        android:src="@drawable/user_detail_image"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.83" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/density_independent_pixel_8dp"
        app:cardElevation="@dimen/density_independent_pixel_4dp"
        app:cardUseCompatPadding="true"

        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_detail_image"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/density_independent_pixel_16dp">

            <TextView
                android:id="@+id/user_detail_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sample_user_name"
                android:textColor="@color/black"
                android:fontFamily="@font/robot_condensed"
                android:textSize="@dimen/text_dimension_20sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/user_detail_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sample_gender"
                android:textColor="@color/black"
                android:fontFamily="@font/roboto_condensed_regular"
                android:textSize="@dimen/text_dimension_16sp" />

            <TextView
                android:id="@+id/user_detail_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sample_address"
                android:textColor="@color/black"
                android:fontFamily="@font/roboto_condensed_regular"
                android:textSize="@dimen/text_dimension_16sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
