<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/light_green"
    android:background="#FFFFFF">

    <ScrollView
        android:layout_width="@dimen/density_independent_pixel_0dp"
        android:layout_height="@dimen/density_independent_pixel_0dp"

        app:layout_constraintBottom_toTopOf="@id/detailedAddToCartButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/detailedProductImage"
                android:layout_width="@dimen/density_independent_pixel_0dp"
                android:layout_height="@dimen/density_independent_pixel_300dp"
                android:scaleType="centerCrop"
                android:transitionName="photoToAnimate"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@color/light_green"
                tools:src="@tools:sample/backgrounds/scenic" />

            <TextView
                android:id="@+id/detailedProductName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/density_independent_pixel_16dp"
                android:layout_marginTop="@dimen/density_independent_pixel_16dp"
                android:text="@string/product_name"
                android:fontFamily="@font/robot_condensed"
                android:textColor="@color/bright_yellow"
                android:textSize="@dimen/text_dimension_24sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/detailedProductImage" />


            <TextView
                android:id="@+id/detailedProductCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/density_independent_pixel_16dp"
                android:layout_marginTop="@dimen/density_independent_pixel_8dp"
                android:fontFamily="@font/roboto_condensed_regular"
                android:textColor="@color/bright_yellow"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detailedProductName"
                tools:text="Root Vegetable" />

            <TextView
                android:id="@+id/detailedProductRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/density_independent_pixel_16dp"
                android:layout_marginTop="@dimen/density_independent_pixel_8dp"
                android:fontFamily="@font/roboto_condensed_regular"
                android:textColor="@color/bright_yellow"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detailedProductCategory"
                tools:text="Root Vegetable" />

            <TextView
                android:id="@+id/detailedProductPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/density_independent_pixel_16dp"
                android:layout_marginTop="@dimen/density_independent_pixel_8dp"
                android:fontFamily="@font/robot_condensed"
                android:textColor="@color/bright_yellow"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detailedProductRating"
                tools:text="$1.23" />


            <TextView
                android:id="@+id/detailedProductDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/density_independent_pixel_16dp"
                android:fontFamily="@font/roboto_condensed_regular"
                android:textStyle="normal"
                android:textColor="@color/white"
                android:text="@string/desc_here"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/detailedProductPrice" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/detailedAddToCartButton"
        android:layout_width="@dimen/density_independent_pixel_0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/rounded_button"
        android:text="@string/add_to_cart"
        android:textColor="#FFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>